add user logout flow
closes #1